# mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.py  enhanced_main.py  example_usage.py  example_usage_enhanced.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_enhanced.txt  setup.sh  usage.sh
.github/workflows/: ci.yml
config/: base.yml  development.yml  production.yml
deployment/: config.yaml
deployment/kubernetes/: mcp-server.yaml
deployment/prometheus/: prometheus.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf
frontend/src/components/: AdminDashboard.tsx  ModelInterface.tsx
infrastructure/kubernetes/: ingress.yaml
infrastructure/terraform/: main.tf
k8s/base/: deployment.yaml  ingress.yaml  service.yaml
scripts/: deploy.sh
scripts/deploy/: deployment_manager.py
src/: app.py  main.py
src/api/: middleware.py  router.py
src/config/: app_config.py  init.py  settings.py
src/core/: rbac.py
src/database/: crud.py  session.py
src/models/: core.py  database.py  user.py
src/monitoring/: health_check.py  metrics_collector.py
src/schemas/: api.py
src/services/: advanced_cache.py  auth_service.py  cache_service.py  metrics_service.py  model_optimization.py  model_optimization_service.py  model_service.py  rag_service.py
src/tests/: test_auth_service.py  test_model_service.py
src/utils/: container.py  exceptions.py  helpers.py  logging.py  monitoring.py  monitoring_enhanced.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_version_management.py
web/: package.json
(+53 files in other folders)
