[tool.poetry]
name = "mcp-server"
version = "1.0.0"
description = "Akıllı Multi-Model + RAG + LLM Platform"
authors = ["Senin Adın <mail@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110"
uvicorn = "^0.29"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0"
pydantic = "^2.0"
openai = "^1.0"
transformers = "^4.40"
prometheus-client = "^0.20"
psutil = "^5.9"
requests = "^2.31"
beautifulsoup4 = "^4.12"
pillow = "^10.0"
pytesseract = "^0.3"
PyMuPDF = "^1.24"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"